--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -48,7 +48,7 @@ http {
     server {
 	    listen 443 ssl;
 
-        server_name fozzey.ru;
+        server_name {{ inventory_hostname }};
         ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
         ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
         location / {
