--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -1,16 +1,18 @@
-server {
-    listen 80 default_server;
-	server_name _;
-	return 301 https://$host$request_uri;
-}
+http {
+    server {
+        listen 80 default_server;
+        server_name _;
+        return 301 https://$host$request_uri;
+    }
 
-server {
-    listen 443 ssl;
+    server {
+        listen 443 ssl;
 
-    server_name {{ inventory_hostname }};
-    ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
-    ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
-    location / {
-	    proxy_pass app
+        server_name {{ inventory_hostname }};
+        ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
+        ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
+        location / {
+            proxy_pass app
+        }
     }
 }
