--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -1,18 +1,58 @@
+# Take note of http://wiki.nginx.org/Pitfalls
+
+#user  www;
+worker_processes  1;
+
+#load_module "modules/ngx_stream_module.so";
+
+#error_log  logs/error.log;
+#error_log  logs/error.log  notice;
+#error_log  logs/error.log  info;
+#error_log  syslog:server=unix:/dev/log,severity=notice;
+
+#pid        logs/nginx.pid;
+
+worker_rlimit_nofile 1024;
+events {
+    worker_connections  800;
+}
+
+
 http {
-    server {
-        listen 80 default_server;
-        server_name _;
-        return 301 https://$host$request_uri;
-    }
+    include       mime.types;
+    default_type  application/octet-stream;
+    index         index.html index.htm;
+
+    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+    #                  '$status $body_bytes_sent "$http_referer" '
+    #                  '"$http_user_agent" "$http_x_forwarded_for"';
+
+    #access_log  logs/access.log  main;
+    #access_log  syslog:server=unix:/dev/log,severity=notice main;
+
+    #tcp_nopush     on;
+
+    #keepalive_timeout  0;
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    server_tokens off;
 
     server {
-        listen 443 ssl;
+	    listen 80 default_server;
+		server_name _;
+		return 301 https://$host$request_uri;
+	}
+
+    server {
+	    listen 443 ssl;
 
         server_name {{ inventory_hostname }};
         ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
         ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
         location / {
-            proxy_pass http://app;
-        }
+		    proxy_pass http://app;
+	    }
     }
 }
