--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -40,15 +40,13 @@ http {
     server_tokens off;
 
     server {
-        listen 80 default_server;
-        server_name _;
-        return 301 https://$host$request_uri;
+        server_name {{ inventory_hostname }};
+        return 301 $scheme://www.{{ inventory_hostname }}$request_uri;
     }
 
     server {
         listen 443 ssl;
-
-        server_name {{ inventory_hostname }};
+        server_name www.{{ inventory_hostname }};
         ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
         ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
         location / {
