--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -39,16 +39,35 @@ http {
 
     server_tokens off;
 
+    #
+    # Redirect all non-www to www
     server {
-        server_name {{ inventory_hostname }};
-        return 301 $scheme://www.{{ inventory_hostname }}$request_uri;
+        server_name          {{ inventory_hostname }};
+        ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
+        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
+        listen               *:80;
+        listen               *:443 ssl spdy;
+
+        return 301 https://www.{{ inventory_hostname }}$request_uri;
+    }
+
+    #
+    # Redirect all non-encrypted to encrypted
+    #
+    server {
+        server_name          www.{{ inventory_hostname }};
+        listen               *:80;
+        listen               [::]:80;
+
+        return 301 https://www.{{ inventory_hostname }}$request_uri;
     }
 
     server {
-        listen 443 ssl;
-        server_name www.{{ inventory_hostname }};
-        ssl_certificate /etc/ssl/{{ inventory_hostname }}.crt;
-        ssl_certificate_key /etc/ssl/{{ inventory_hostname }}.key;
+        server_name          www.{{ inventory_hostname }};
+        ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
+        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
+        listen               *:443 ssl spdy;
+
         location / {
             proxy_pass http://app;
         }
