--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -46,7 +46,7 @@ http {
         ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
         ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
         listen               *:80;
-        listen               *:443 ssl spdy;
+        listen               *:443 ssl;
 
         return 301 https://www.{{ inventory_hostname }}$request_uri;
     }
@@ -66,7 +66,7 @@ http {
         server_name          www.{{ inventory_hostname }};
         ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
         ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
-        listen               *:443 ssl spdy;
+        listen               *:443 ssl;
 
         location / {
             proxy_pass http://app;
