--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -43,8 +43,8 @@ http {
     # Redirect all non-www to www
     server {
         server_name          {{ inventory_hostname }};
-        ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
-        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
+        ssl_certificate      /etc/ssl/{{ inventory_hostname }}.crt;
+        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}.key;
         listen               *:80;
         listen               *:443 ssl;
 
@@ -64,8 +64,8 @@ http {
 
     server {
         server_name          www.{{ inventory_hostname }};
-        ssl_certificate      /etc/ssl/{{ inventory_hostname }}/crt;
-        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}/key;
+        ssl_certificate      /etc/ssl/{{ inventory_hostname }}.crt;
+        ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}.key;
         listen               *:443 ssl;
 
         location / {
