--- a/ansible/nginx.conf.j2
+++ b/ansible/nginx.conf.j2
@@ -45,8 +45,8 @@ http {
         server_name          {{ inventory_hostname }};
         ssl_certificate      /etc/ssl/{{ inventory_hostname }}.crt;
         ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}.key;
-        listen               *:80;
-        listen               *:443 ssl;
+        listen               80;
+        listen               443 ssl;
 
         return 301 https://www.{{ inventory_hostname }}$request_uri;
     }
@@ -56,8 +56,7 @@ http {
     #
     server {
         server_name          www.{{ inventory_hostname }};
-        listen               *:80;
-        listen               [::]:80;
+        listen               80;
 
         return 301 https://www.{{ inventory_hostname }}$request_uri;
     }
@@ -66,7 +65,7 @@ http {
         server_name          www.{{ inventory_hostname }};
         ssl_certificate      /etc/ssl/{{ inventory_hostname }}.crt;
         ssl_certificate_key  /etc/ssl/{{ inventory_hostname }}.key;
-        listen               *:443 ssl;
+        listen               443 ssl;
 
         location / {
             proxy_pass http://app;
